<resources>
    <string name="app_name">AutoMemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_my_team_profile">My Team</string>
    <string name="title_create_team_profile">Create</string>
    <string name="title_search_team_profile">Search</string>
    <string name="title_activity_record">Record</string>
    <string name="title_activity_team">Team</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="prompt_create_team">Team Name</string>
    <string name="action_sign_in">Sign in</string>

    <string name="action_record_modify">Modify</string>
    <string name="action_record_extend">Extend</string>
    <string name="action_record_save">Save</string>
    <string name="action_record_revoke">Revoke</string>
    <string name="action_record_confirm">Confirm</string>
    <string name="action_record_cancel">Cancel</string>


    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_create_team">Create Team</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_team_name">The team name needs at least 6 characters</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_repeat_phone">This phone has been registered</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_different_password">Two passwords is not the same</string>
    <string name="error_short_password">The password needs at least 6 characters</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing phone number
        completions."
    </string>
    <string name="permission_rationale_record">"Recording Audio and Creating Files permissions are needed for recording."
    </string>
</resources>
